# codereviewagent

./: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
agent/core/: mcp.py  react.py  toolCall.py
agent/core/base/: __init__.py  _base.py  base.py  executor.py  memory.py  types.py
agent/custom/: reviewer.py
agent/custom/prompts/: common_code_review.xml
agent/llm/: base.py
agent/llm/providers/: bedrock.py
agent/mcpHub/: __init__.py  client.py  installer.py  server.py
agent/prompts/: system_prompt.xml
cli/: __main__.py
configs/: __init__.py  mcp_config.json  settings.py
mcp_servers/code_review/: __init__.py  config.py  instance.py  main.py  prompts.py  tools.py
mcp_servers/code_review/configs/: config.yml  config_manager.py
mcp_servers/code_review/rag/: __init__.py  request.py  scrape_docs.py  split.py  tools.py
mcp_servers/code_review/templates/: analyze_changes.xml  common_code_review.xml  large_code_review.xml  lark_review.xml  standard_summary.xml
plugin/: base.py  decorators.py  manager.py  registry.py
plugins/chat/: __init__.py  main.py
plugins/hello/: __init__.py  main.py
plugins/mcp/: __init__.py  main.py
plugins/review/: __init__.py  main.py
share/: util.py
test/: cr_monthly_summary.py  test_parse_comments.py
